app/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: workload
spec:
  gatewayClassName: approuting-istio
  infrastructure:
    annotations:
      service.beta.kubernetes.io/azure-load-balancer-internal: "true"
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: workload.example.com
      allowedRoutes:
        namespaces:
          from: Same
